﻿ChangeLog

1.10.0.2
    Fixed bug where achievements were being dropped 
    Added new toggle to Show all earned only

1.10.0.1
    Fixed nullref when starting a sandbox (and possibly other) game

1.10.0
    Adoption by Linuxgurugamer
    Added support for ClickThroughBlocker
    Added version file
    Added AssemblyVersion.tt
    Added InstallChecker
    Added support for Toolbarcontroller, using old button-normal/button-highlight for the blizzy toolbar buttons
    Replaced stock button with new image, normal and highlight now working
    Moved all images into PluginData
    Replaced all GetTexture calls with ToolbarControl.LoadImageFromFile to avoid compression
    Removed all the SENTAR specific code
    Replaced all hard-coded planet specific code with code which gets the available planets from the game itself.
    Added new achievement to number of launches (500)
    Removed hard-coded techs, now gets list of techs from the game
    Removed hard-coded altitude records, gets list from the game
    Added toggle to only show earned achievements

    Defined CFG file for user-defined achievements
       	Surface Sample
	    Orbit Achievement
	    Landing

    Added access to button in flight scene
    Changed code from reloading on every scene to always being there, saves reinitializing every scene entry
    Removed the installScenaro() method 
    REmoved old code to convert old storage to new method
    Removed updatechecker
    Added settings page for:
        KSP Skin flag
        Achievement timeout value

1.9.4.2
    Updated for KSP 1.4.1

1.9.4.1
    Updated for KSP 1.2

1.9.4
    Recompiled and fixed for version 1.2 preRelease of KSP. Don't use this for 1.1.3 or you will have issues.. Like bad ones.

1.9.3
    Recompile and AVC update for KSP 1.1.3

1.9.2
    Update for KSP 1.12

1.9 
    No more dependency for Blizzy Tool bar.. Been wanting to transfer to default KSP tool bar for awhile now.
    Updated for 1.1 PreRelease.