@@ -10,7 +10,7 @@
     "MAJOR": 1,
     "MINOR": 10,
     "PATCH": 0,
-    "BUILD": 1
+    "BUILD": 2
   },
   "KSP_VERSION_MIN": {
     "MAJOR": 1,
